--- a/FreshVeg.WebClient/Views/Home/Index.cshtml
+++ b/FreshVeg.WebClient/Views/Home/Index.cshtml
@@ -1,3 +1,4 @@
+@using Microsoft.Extensions.Configuration
 @{
     ViewData["Title"] = "Home Page";
 }
@@ -7,4 +8,15 @@
 <script src="~/dist/vendor.js" asp-append-version="true"></script>
 @section scripts {
     <script src="~/dist/main-client.js" asp-append-version="true"></script>
+    <script>
+        @{
+            var configuration = (IConfiguration) ViewData["Configuration"];
+            var port = configuration.GetValue<String>("HostServer:Port");
+        }
+        window.configuration = {
+            hostServer: {
+                port: @port
+            }
+        }
+    </script>
 }
